<resources>
    <!-- CreateSearch_Group> -->
    <string name="app_name">CSE110_CHORES</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create">Create</string>

    <!-- MainScreen -->
    <string name="choreLabel">Chores</string>
    <string name="paymentLabel">Payments</string>
    <string name="eventLabel">Events</string>
    <string name="calendarLabel">Calendar</string>
    <string name="memberLabel">Members</string>

    <!-- ChoresList -->
    <string name="chorelist">Chores List</string>
    <string name="assignChore">Assign Chores</string>
    <string-array name="sortedBy">
        <item>Sort by...</item>
        <item>Name</item>
        <item>Chore</item>
        <item>Frequency</item>
    </string-array>
    <string name="sortBy">Sort by</string>

    <!-- ChoresScreen -->
    <string name="chore">Enter New Chore</string>
    <string name="choreAddButton">ADD CHORE</string>
    <string-array name="frequency">
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
        <item>Daily</item>
    </string-array>

    <!-- MemberScreen -->
    <string name="memberAddButton">Add Member</string>
    <string name="member">Enter New Member</string>
    <string name="memberDelete">DELETE</string>

    <!-- PaymentScreen -->
    <string name="name">Name</string>
    <string name="description">for...</string>
    <string name="paymentAddButton">Add Payment</string>
    <string name="paymentDelete">PAID</string>
    <string name="addPayments">Add Payment</string>
    <string name="owes">owes</string>
    <string name="$">$</string>

    <!-- EventScreen -->
    <string name="nameOfEvent">Event Name</string>
    <string name="dateOfEvent">Date</string>
    <string name="start">Start Time</string>
    <string name="end">End Time</string>
    <string name="desOfEvent">description</string>
    <string name="addEvents">Add Events</string>
    <string name="to">to</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_chores_screen">ChoresScreen</string>
    <string name="title_activity_chores_list">ChoresList</string>
    <string name="title_activity_blah">blah</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_events_screen">EventsScreen</string>
</resources>
