<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cse110.com.cse110_chores.MainScreen">

    <Button
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:id="@+id/payButton"
        android:background="@mipmap/ic_pay"
        android:text="@string/paymentLabel"
        android:gravity="bottom|center"
        android:layout_alignTop="@+id/calendarButton"
        android:layout_alignBottom="@+id/calendarButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:id="@+id/choreButton"
        android:background="@mipmap/ic_chores"
        android:text="@string/choreLabel"
        android:gravity="bottom|center"
        android:layout_above="@+id/payButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:id="@+id/calendarButton"
        android:background="@mipmap/ic_calendar"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/calendarLabel"
        android:gravity="bottom|center" />

    <Button
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:id="@+id/eventsButton"
        android:background="@mipmap/ic_events"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/payButton"
        android:layout_alignStart="@+id/payButton"
        android:text="@string/eventLabel"
        android:layout_above="@+id/payButton"
        android:gravity="bottom|center" />

    <Button
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:id="@+id/memberButton"
        android:background="@mipmap/members"
        android:text="@string/memberLabel"
        android:gravity="bottom|center"
        android:layout_below="@+id/calendarButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
