<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cse110.com.cse110_chores.EventsScreen">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/eventsLayout">

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/eventName"
            android:hint="@string/nameOfEvent"
            android:inputType="text"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/eventDate"
            android:hint="@string/dateOfEvent"
            android:layout_weight="0.5" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventsLayout"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/eventStartTime"
            android:hint="@string/start"
            android:layout_weight="0.32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="to"
            android:id="@+id/to"
            android:layout_weight="0.5"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/eventEndTime"
            android:hint="@string/end"
            android:layout_weight="0.32"
            android:layout_marginLeft="30dp" />

    </LinearLayout>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Add Event"
        android:id="@+id/addEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eventDescription"
        android:hint="@string/desOfEvent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

</RelativeLayout>
