<!-- created by Bailey -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cse110.com.cse110_chores.ChoresList">

    <!-- add chore button for the chore list activity -->
    <Button
        android:id="@+id/choreAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/choreAddButton"/>

    <!-- sets a layout for assign chore button and a spinner to sort the chores user's name -->
    <LinearLayout
        android:id="@+id/assignChoreAndSort"
        android:layout_above="@+id/choreAddButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!-- assign chore button -->
        <Button
            android:id="@+id/assignChore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/assignChore"
            android:layout_weight="1"
            android:gravity="center"/>

        <!-- spinner with the members names -->
        <Spinner
            android:id="@+id/sortSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/sortBy"
            android:gravity="center"/>
    </LinearLayout>

    <!-- listview to hold all the chores with the frequency and the names -->
    <ListView
        android:id="@+id/chorelistview"
        android:layout_above="@+id/assignChoreAndSort"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    </ListView>

</RelativeLayout>
