<!-- created by Bailey-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CreateSearch_Group"
    android:background="#ffffff">


    <!-- layout for the login/create page -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <!-- Logo -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_broom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toplayout"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Username text field for user input -->
        <EditText
            android:id="@+id/username"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="#17170459" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/middlelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toplayout"
        android:orientation="horizontal">

        <!-- Password text field for user input-->
        <EditText
            android:id="@+id/password"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="#17170459"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/middlelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- button to login -->
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"/>

        <!-- button to create an account-->
        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create" />

    </LinearLayout>
</RelativeLayout>
